--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <title>CorGi</title>
 </head>
 <body>
-  <p>Project page will be available soon.</p>
+  <h1>CorGi</h1>
+  <p>Project page will be available soon..</p>
+  <p>
+    <a href="https://github.com/CASL-KU/CorGi">GitHub Repository</a>
+  </p>
 </body>
 </html>
