--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>CorGi</title>
+  <meta http-equiv="refresh" content="0; url=https://github.com/CASL-KU/CorGi">
 </head>
 <body>
-  <h1>CorGi</h1>
-  <p>Project page will be available soon..</p>
   <p>
-    <a href="https://github.com/CASL-KU/CorGi">GitHub Repository</a>
+    Redirecting to the GitHub repository…<br>
+    If you are not redirected automatically,
+    <a href="https://github.com/CASL-KU/CorGi">click here</a>.
   </p>
 </body>
 </html>
